# -QO3-LAIC-FIO-Multi-Parameter-Earthquake-Regime-Detection-System

./: AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  pyproject.toml  requirements.txt  setup.py
data/examples/: EXAMPLE_gnss.csv  EXAMPLE_groundwater.csv  EXAMPLE_radon.csv
docs/: API.md  METHODOLOGY.md
src/: qo3_fio_ultimate.py
tests/: test_fio.py
