[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qo3-laic-fio"
version = "2.0.0"
authors = [
    { name = "Igor Chechelnitsky", email = "" }
]
description = "Multi-Parameter Earthquake Regime Detection System"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/ichechelnitsky/qo3-laic-fio"
"Bug Tracker" = "https://github.com/ichechelnitsky/qo3-laic-fio/issues"

[project.scripts]
qo3-fio = "qo3_fio_ultimate:main"
